# Avrix

./: .clang-tidy  .cppcheck-suppressions  .gitignore  ARDUINO_CHIPSETS.md  AUDIT_REPORT.md  BUILD_GUIDE.md  CHANGELOG.md  Doxyfile  Doxyfile.in  LICENSE  MIGRATION_GUIDE.md  Makefile  PORTING_GUIDE.md  README.md  RESEARCH_SUMMARY.md  ROADMAP.md  autofix_report.md  meson.build  meson_options.txt  optimize.sh  package.json  repo_map.json  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  static-analysis.yml
arch/avr8/: startup.S  vectors.S
arch/avr8/common/: hal_avr8.c  hal_context_switch.S
arch/avr8/include/: hal_avr8.h
arch/common/: hal.h  hal_host.h
build_flags/: flags.meson  flags.meson.in  meson.build
compat/avr/: eeprom.h  interrupt.h  io.h  pgmspace.h
config/: meson.build
config/profiles/: high.ini  high_profile.conf  low.ini  low_profile.conf  mid.ini  mid_profile.conf
cross/: atmega128.cross  atmega32.cross  atmega328p_clang.cross  atmega328p_clang20.cross  atmega328p_gcc14.cross  atmega328p_gcc7.cross  atmega328p_gcc73.cross  atmega32u4_gcc14.cross  atmega644p_gcc14.cross  avr_m328p.in  avr_m328p.txt  gen_avr_cross.sh
docker/: Dockerfile  entrypoint.sh
docs/: .gitignore  BUILD_SYSTEM_MODERNIZATION.md  COMPREHENSIVE_RD_REPORT.md  GETTING_STARTED_ANALYSIS.md  PROGRESS.md  REQUIREMENTS.md  SECURITY_SUPPLY_CHAIN.md  STATUS_REPORT.md  TECHNICAL_DEBT_ANALYSIS.md  UNIX_DESIGN_PATTERNS_RESEARCH.md  requirements.txt
docs/architecture/: ARCHITECTURE.md
docs/source/: conf.py  devcontainer.rst  filesystem.rst  fuses.rst  hardware.rst  index.rst  memguard.rst  monograph.rst  roadmap-qemu-avr.rst  slip_networking.rst  tmux_dev.rst  toolchain.rst
docs/source/api/: library_root.rst
docs/technical/: ATMEGA328P_REFERENCE.md  ATMEGA32U4_REFERENCE.md  CHIPSET_COMPARISON.md
drivers/: meson.build
drivers/fs/: eepfs.c  eepfs.h  meson.build  romfs.c  romfs.h  vfs.c  vfs.h
drivers/net/: ipv4.c  ipv4.h  meson.build  slip.c  slip.h
drivers/tty/: meson.build  tty.c  tty.h
examples/: door_demo.c  editor_common.c  editor_common.h  editor_utils.c  editor_utils.h  fs_demo.c  meson.build  ned.c  romfs_demo.c  slip_demo.c  vini.c
examples/high_tier/: full_posix_pse54.c  mmu_pse54.c  processes_pse54.c  signals_pse54.c
examples/low_tier/: eeprom_pse51.c  hello_pse51.c  romfs_pse51.c  scheduler_pse51.c
examples/mid_tier/: ipc_pse52.c  network_pse52.c  threading_pse52.c  vfs_pse52.c
include/: avr_gdbstub.h  compat.h  door.h  eepfs.h  eeprom_wrap.h  fixed_point.h  fs.h  gdbstub.h  ipv4.h  kalloc.h  memguard.h  nk_fs.h  nk_lock.h  nk_spinlock.h  nk_superlock.h  nk_task.h  romfs.h  slip.h  spinlock.h  task.h  tty.h
kernel/: meson.build
kernel/ipc/: door.c  door.h  meson.build
kernel/mm/: kalloc.c  kalloc.h  meson.build
kernel/sched/: meson.build  scheduler.c  scheduler.h
kernel/sync/: meson.build  spinlock.c  spinlock.h
lib/posix/: posix_types.h
lib/posix/pthread/: pthread.h  pthread_create.c  pthread_mutex.c  pthread_once.c
lib/posix/stubs/: exec.c  fork.c  pipe.c  signal.c
lib/posix/unistd/: exit.c  getpid.c  sleep.c  unistd.h
meson/: avr_gcc_cross.txt
scripts/: README.md  coverage_analysis.sh  flamegraph_analysis.sh  flash.sh  gen_flags.py  repo_map.js  run_all_analysis.sh  size_gate.py  static_analysis.sh  tmux-dev.sh  verify_profiles.sh
src/: avr_gdbstub.c  avr_stub.c  context_switch.S  door.c  door_entry.S  eepfs.c  fixed_point.c  fs.c  gdbstub.c  ipv4.c  kalloc.c  main.c  meson.build  nk_fs.c  nk_spinlock.c  nk_superlock.c  romfs.c  slip_uart.c  spinlock.c  switch_task.S  task.c  tty.c
tests/: check_docs.py  door_test.c  flock_stress.c  fs_roundtrip.c  fs_simavr_basic.c  fs_test.c  ipv4_test.c  kalloc_test.c  meson.build  romfs_test.c  sim.c  spin_test.c  spinlock_test.c  superlock_test.c  test_check_docs.py  test_check_docs_cli.py  test_check_docs_parser.py  test_fixed_point.c  tty_test.c  unified_spinlock_test.c  vfs_test.c
