# ────────────────────────────────────────────────────────────────────
#  meson_options.txt ― unified after conflict resolution (2025-06-22)
# ────────────────────────────────────────────────────────────────────
option(
  'avr_inc_dir',
  type : 'string',
  value : '',
  description : 'Path to AVR libc headers (falls back to standard include locations)'
)

option(
  'flash_port',
  type : 'string',
  value : '/dev/ttyACM0',
  description : 'Serial port device used by avrdude for flashing firmware'
)

option(
  'flash_programmer',
  type : 'string',
  value : 'arduino',
  description : 'avrdude-compatible programmer identifier (e.g. arduino, usbasp)'
)

option(
  'debug_gdb',
  type : 'boolean',
  value : false,
  description : 'Embed a minimal on-target GDB stub (avr-gdbstub) and enable DEBUG_GDB'
)

option(
  'san',
  type : 'boolean',
  value : false,
  description : 'Enable AddressSanitizer & UndefinedBehaviorSanitizer for host-side tests'
)

option(
  'cov',
  type : 'boolean',
  value : false,
  description : 'Enable LLVM/clang-based code-coverage instrumentation for host unit tests'
)
