# ────────────────────────────────────────────────────────────────────
#  meson_options.txt — unified after conflict resolution (2025-06-22)
# ────────────────────────────────────────────────────────────────────
option(
  'avr_inc_dir',
  type : 'string',
  value : '',
  description : 'Path to AVR-LibC headers (falls back to default include locations)'
)

option(
  'flash_port',
  type : 'string',
  value : '/dev/ttyACM0',
  description : 'Serial port device used by avrdude for flashing firmware'
)

option(
  'flash_programmer',
  type : 'string',
  value : 'arduino',
  description : 'avrdude-compatible programmer identifier (e.g. arduino, usbasp, stk500v1)'
)

option(
  'debug_gdb',
  type : 'boolean',
  value : false,
  description : 'Embed a minimal on-target GDB stub (avr-gdbstub) and set DEBUG_GDB'
)

option(
  'san',
  type : 'boolean',
  value : false,
  description : 'Enable AddressSanitizer & UndefinedBehaviorSanitizer for host-side tests'
)

option(
  'cov',
  type : 'boolean',
  value : false,
  description : 'Enable LLVM/clang-based coverage instrumentation for host unit tests'
)

option(
  'flash_limit',
  type : 'boolean',
  value : true,
  description : 'Enable flash size gate when compiling firmware'
)

option(
  'flash_limit_bytes',
  type : 'integer',
  value : 30720,
  description : 'Maximum firmware size in bytes checked by size gate'
)
